[Add] コンフィグに項目を追加（defaultCount）

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,5 +12,9 @@
 prefix: " "
 
 # defaultGameTime:
-#   未設定じのゲーム時間（秒）
+#   未設定時のゲーム時間（秒）
 defaultGameTime: 600
+
+# defaultCount:
+#   ゲーム開始前のカウント（秒）
+defaultCount: 3
