[Add] ゲームを強制終了するコマンドを追加

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,5 @@ website: https://github.com/IceServerLab/Hueoni
 commands:
   start:
     description: ゲームを開始する
+  finish:
+    description: ゲームを強制終了する
